@@ -1,3 +1,9 @@
+2009-10-22    Michael Schwendt <mschwendt@users.sf.net>
+
+	* src/Main.cpp: port to Audacious 2.2 InputPlugin API
+	  and simplify by removing play_loop thread
+	* src/plugin.c: move C InputPlugin interface here
+
 2009-06-07    Michael Schwendt <mschwendt@users.sf.net>
 
 	* src/Main.cpp: port to Audacious 2.0.1 API
@@ -6,7 +12,7 @@
 2007-11-21    Michael Schwendt <mschwendt@users.sf.net>
 
 	* src/Main.cpp, src/configure.c: port to Audacious 1.4.0 API
-	
+
 2007-03-05    Michael Schwendt <mschwendt@users.sf.net>
 
 	* src/Main.cpp: port to Audacious 1.3.0 InputPlugin API
